# fixed visibility of scrollbar when dialogs are displayed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@
 
 html, body {
   height: 100%;
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 body {
